# replica

./: .gitignore  CMakeLists.txt  README.md
include/replica/arguments/: arguments.cpp  arguments.h
include/replica/copy/: copy.h
include/replica/file/: file.cpp  file.h
include/replica/iou/: example.h  ring.cpp  ring.h
include/replica/iou/completion/: completion.cpp  completion.h
include/replica/iou/data/: data.cpp  data.h
include/replica/iou/ring/: ring.cpp  ring.h
include/replica/mappedFile/: mapped.cpp  mapped.h
include/replica/unique/: unique.cpp  unique.h
src/: main.cpp
submodule/argparse/: Readme.md
submodule/argparse/include/argparse/: argparse.hpp
